Add author and layout defaults

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,11 @@
 title: Mark A Vitale
 description: Unorganized Thoughts
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+      author: "Mark A Vitale"
