Minor updates and spell check

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "cSpell.words": [
-        "subshell"
+        "dealloc",
+        "ifdef",
+        "objc",
+        "subshell",
+        "Sundell",
+        "xcconfig"
     ]
 }
