--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: "Mark A Vitale"
 description: "Unorganized Thoughts"
 author: "Mark A Vitale"
+url: https://markavitale.com
 
 defaults:
   -
